# stock-sentiment

./: .eslintrc.json  .firebaserc  .gitignore  README.md  angular.json  firebase.json  jest.config.js  nx.json  package-lock.json  package.json  tickers.json  tsconfig.base.json  webpack.config.ts
.github/workflows/: data.yml  deploy.yml  frontend.yml  rust.yml
apps/azure/: .funcignore  .gitignore  Pipfile  README.md  fetch_reddit_stocks.sh  firebase.py  package-lock.json  package.json  reddit.py  stock_data.py  submissions.py  tickers.json  tsconfig.json
apps/azure/fetchRedditPosts/: firebase.ts  function.json  index.ts  ingest-reddit-posts.ts  reddit-connection.ts  reddit-posts.ts  stocks.ts
apps/azure/fetchStockPrices/: function.json  index.ts
apps/azure/test/: function.json  index.ts
apps/backend/: .env.example  Cargo.toml  README.md  postgres-deployment.yaml  schema.sql  sqlx-data.json
apps/backend/src/: main.rs
apps/backend/src/platform_data/: model.rs  routes.rs
apps/frontend/: .eslintrc.json  .firebaserc  firebase.json  server.ts  tsconfig.app.json  tsconfig.json  tsconfig.server.json
apps/frontend-e2e/: .eslintrc.json
apps/functions/: jest.config.js
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: colors.scss  index.html  measurements.scss  styles.scss
libs/models/: .eslintrc.json
tools/: restart_server.sh
tools/data-script/: .gitignore  Pipfile  cryptos.json  fetch_reddit_stocks.sh  firebase.py  helper.py  main.py  reddit.py  requirements.txt  submissions.py  tickers.json
(+135 files in other folders)
