[package]
name = "stock_sentiment"
version = "0.1.0"
authors = ["Sedat Sert <bmsedat@gmail.com>", "Bugra Murat Altan <bmaltan@live.com>"]
edition = "2018"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)


[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
sqlx = { version = "0.4", default_features = false, features = [ "runtime-actix-rustls", "offline", "macros", "postgres", "chrono", "decimal", "json" ] }
dotenv = "0.15"
env_logger = "0.8"
log = "0.4.8"
anyhow = "1"
futures = "0.3.13"

[dependencies.bigdecimal]
version = "0.2.0"
features = ["serde"]

